# dataops_ML3

./: .gitignore  DataOps_ML.ipynb  README.md
.github/workflows/: deploy_prenoms.yml
prenoms/: Dockerfile  api.py  pyproject.toml
templates/: predict_form.html  predict_result.html
