[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "TP-ML"
version = "0.1.0"
description = ""
authors = ["Mathieu <mathieu.thomassin@eleve.ensai.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
joblib = "^1.3.2"
scikit-learn = "1.3.2"
numpy = "^1.26.3"
pandas = "*"
pyarrow = "*"
